/*
 * Copyright (c) 2020-2021 Skymind Education Group Sdn. Bhd.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.

 * SPDX-License-Identifier: Apache-2.0
 */

package global.skymind.training.intermediate.collections;
//We can also write generic functions that can be called with different types of arguments based on the type of arguments passed to generic method, the compiler handles each method.
//A Simple Java program to show working of user defined Generic functions

public class Ex2_GenericFunction {

    //A Generic method example
    /* enter your code here*/

    //Driver method
    public static void main(String[] args)
    {
        //Calling generic method with Integer argument
        //genericDisplay(2);

        //Calling generic method with String argument
        //genericDisplay("Generic Function");

        //Calling generic method with double argument
        //genericDisplay(2.0);
    }
}